--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.8.x-dev"
+      "dev-experimental": "1.8.x-dev"
     }
   },
   "autoload": {
